--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,19 +2,19 @@
   "name": "Koala Todo",
   "icons": [
     {
-      "src": "icons/launcher-icon-1x.png",
+      "src": "/icons/launcher-icon-1x.png",
       "sizes": "48x48",
       "type": "image/png"
     }, {
-      "src": "icons/launcher-icon-2x.png",
+      "src": "/icons/launcher-icon-2x.png",
       "sizes": "96x96",
       "type": "image/png"
     }, {
-      "src": "icons/launcher-icon-3x.png",
+      "src": "/icons/launcher-icon-3x.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "icons/launcher-icon-4x.png",
+      "src": "/icons/launcher-icon-4x.png",
       "sizes": "192x192",
       "type": "image/png"
     }
@@ -22,5 +22,6 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#343436",
-  "theme_color": "#343436"
+  "theme_color": "#343436",
+  "gcm_sender_id": "103953800507"
 }
